--- a/website.html
+++ b/website.html
@@ -6,7 +6,7 @@
 <title>Tahira - Portfolio</title>
 <style>
     body {
-    font-family: Arial, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
@@ -33,6 +33,7 @@
     }
 
     section {
+    font-family: 'Times New Roman', Times, serif;
     padding: 40px;
     max-width: 800px;
     margin: auto;
@@ -66,7 +67,7 @@
     <a href="#about">About</a>
     <a href="#portfolio">Portfolio</a>
     <a href="#contact">Contact</a>
-    <a href="resume.pdf" target="_blank">Resume</a>
+    <a href="Tahira's Resume.pdf" target="_blank">Resume</a>
 </nav>
 
 <section id="about">
@@ -108,7 +109,7 @@
 </section>
 
 <footer>
-    <p>&copy; 2025 Your Name. All rights reserved.</p>
+    <p>&copy; 2025 Tahira Smith. All rights reserved.</p>
 </footer>
 
 </body>
