--- a/website.html
+++ b/website.html
@@ -6,53 +6,66 @@
 <title>Tahira - Portfolio</title>
 <style>
     body {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f4f4f4;
+        color: #333;
     }
 
     header {
-    background-color: #333;
-    color: #fff;
-    padding: 40px 0;
-    text-align: center;
+        background-color: #333;
+        color: #fff;
+        padding: 40px 0;
+        text-align: center;
     }
 
     nav {
-    text-align: center;
-    background-color: #444;
-    padding: 10px 0;
+        text-align: center;
+        background-color: #444;
+        padding: 10px 0;
     }
 
     nav a {
-    color: #ffffff;
-    margin: 0 15px;
-    text-decoration: none;
+        color: #ffffff;
+        margin: 0 15px;
+        text-decoration: none;
     }
 
     section {
-    font-family: 'Times New Roman', Times, serif;
-    padding: 40px;
-    max-width: 800px;
-    margin: auto;
+        padding: 40px;
+        max-width: 800px;
+        margin: auto;
     }
 
     h1, h2 {
-    margin-top: 0;
+        margin-top: 0;
     }
 
-    .portfolio-item {
-    margin-bottom: 20px;
+    .category-button {
+        display: inline-block;
+        width: 100%;
+        max-width: 300px;
+        margin: 10px auto;
+        padding: 15px;
+        background-color: #555;
+        color: #fff;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 50px;
+        font-size: 18px;
+    }
+
+    .category-button:hover {
+        background-color: #333;
     }
 
     footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px 0;
-    margin-top: 40px;
+        background-color: #333;
+        color: #fff;
+        text-align: center;
+        padding: 20px 0;
+        margin-top: 40px;
     }
 </style>
 </head>
@@ -77,35 +90,30 @@
         and predictive analytics. While I am early in my ML journey, I have completed data
         driven projects using Python, Numpy, Pandas, and Matplotlib, and enjoy working with
         complex data sets to uncover meaningful insights
-
     </p>
     <p>
         I also have experience in full-stack web development using React, Javascript, HTML,
-        and CSS. I have hands on engineering skills with CAD, circuit design, and electronics.
+        and CSS. I have hands-on engineering skills with CAD, circuit design, and electronics.
     </p>
     <p>
-        I am passionate about building practical, data-powered systems and eagar to keep expanding
+        I am passionate about building practical, data-powered systems and eager to keep expanding
         my skills at the intersection of machine learning, software, and hardware.
     </p>
 </section>
 
 <section id="portfolio">
-    <h2>Portfolio</h2>
-    <div class="portfolio-item">
-    <h3>Project Title 1</h3>
-    <p>Description of the project, technologies used, and what you accomplished.</p>
-    </div>
-    <div class="portfolio-item">
-    <h3>Project Title 2</h3>
-    <p>Description of another project. You can include GitHub or live demo links here too.</p>
-    </div>
+    <h2>Portfolio Categories</h2>
+    <a class="category-button" href="ml-projects.html">Machine Learning Projects</a>
+    <a class="category-button" href="webdev-projects.html">Web Development Projects</a>
+    <a class="category-button" href="hardware-projects.html">Hardware & Electronics</a>
+    <a class="category-button" href="misc-projects.html">Miscellaneous Projects</a>
 </section>
 
 <section id="contact">
     <h2>Contact Me</h2>
     <p>Email: <a href="mailto:tsmith01@bu.edu">tsmith01@bu.edu</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">yourusername</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/tahirasmith/" target="_blank">Tahira's LinkedIn</a></p>
+    <p>GitHub: <a href="https://github.com/tahirasmith0" target="_blank">tahirasmith0</a></p>
 </section>
 
 <footer>
