slight change, added minor

--- a/website.html
+++ b/website.html
@@ -73,7 +73,7 @@
 
 <header>
     <h1>Tahira Smith</h1>
-    <p>Computer Engineering Major | Machine Learning Concentration</p>
+    <p>Computer Engineering Major | Machine Learning Concentration | Data Science Minor</p>
 </header>
 
 <nav>
